fixes an issue with modals being behind overlays

--- a/org.eclipse.winery.frontends/app/topologymodeler/src/app/topology-renderer/topology-renderer.component.css
+++ b/org.eclipse.winery.frontends/app/topologymodeler/src/app/topology-renderer/topology-renderer.component.css
@@ -13,7 +13,7 @@
  ********************************************************************************/
 
 winery-canvas {
-    position: fixed;
+    position: absolute;
     height: 100%;
     width: 100%;
 }
